--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "email": "email dev"
+    "email": "email dev --dir src/Emails"
   },
   "dependencies": {
     "@react-email/components": "0.0.31",
