--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "email": "email dev --dir src/Emails"
   },
   "dependencies": {
-    "@react-email/components": "0.0.31",
+    "@react-email/components": "^0.0.31",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "resend": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
