--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@react-email/components": "^0.0.31",
+    "emailjs-com": "^3.2.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "^7.1.1",
