--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "email": "email dev --dir src/Emails"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@react-email/components": "^0.0.31",
