--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-email/components": "^0.0.31",
     "emailjs-com": "^3.2.0",
     "react": "18.3.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.3.1",
     "react-router-dom": "^7.1.1",
     "resend": "^4.0.1"
