--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@react-email/components": "^0.0.31",
+    "@tailwindcss/vite": "^4.0.8",
     "emailjs-com": "^3.2.0",
     "react": "18.3.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.3.1",
     "react-router-dom": "^7.1.1",
-    "resend": "^4.0.1"
+    "resend": "^4.0.1",
+    "tailwindcss": "^4.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
